Fixed crow install

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
     oroneta.core-system.server:
         container_name: oroneta.core-system.server
-        restart: unless-stopped
+        # restart: unless-stopped
         build:
             context: ..
             dockerfile: ./docker/server/Dockerfile
