--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,9 @@
 
 # Directories
 SRC_DIR = c
-INC_DIR = -Ih
-LINK_DIR = -L/usr/pqsql-14/lib -L/usr/lib64
-LIB_DIR = -lpthread -lpqs -lpqxx
+INC_DIR = -Ih -I/usr/pgsql-14/include/ -I/usr/local/include/
+LINK_DIR = -L/usr/pgsql-14/lib/ -L/usr/local/lib/
+LIB_DIR = -lpthread -lpqxx -lpq
 BUILD_DIR = ../build
 DIST_DIR = ../dist
 PROJECT_NAME = OronetaCoreServer
@@ -17,7 +17,9 @@ OBJS = $(patsubst $(SRC_DIR)/%.cpp,$(BUILD_DIR)/%.o,$(SRCS))
 TARGET = $(DIST_DIR)/$(PROJECT_NAME)
 
 # Compiler and options flag "no warning"
-CC = g++
+CC = g++ 
+# C++ 17
+GXXFLAGS = -std=c++17
 CFLAGS = $(INC_DIR) $(LINK_DIR) $(LIB_DIR)
 
 # Main executable program
@@ -26,12 +28,12 @@ all: $(TARGET)
 # g++ --all
 $(TARGET): $(OBJS)
 	@mkdir -p $(DIST_DIR)
-	$(CC) $(OBJS) -o $(TARGET)
+	$(CC) $(CFLAGS) $(OBJS) -o $(TARGET)
 
 # g++ --code
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp
 	@mkdir -p $(BUILD_DIR)
-	$(CC) -c $< -o $@ $(CFLAGS)
+	$(CC) $(CFLAGS) -c $< -o $@
 
 # Regla para limpiar
 clean:
