--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,6 +9,9 @@ services:
             - 5432:5432
         volumes:
             - postgres:/var/lib/postgresql/data
+            - ./migration/init.sql:/docker-entrypoint-initdb.d/init.sql
+            # Dev
+            - ./migration/demo.sql:/docker-entrypoint-initdb.d/demo.sql
         environment:
             POSTGRES_PASSWORD: ${PG_DBPASS}
             POSTGRES_USER: ${PG_DBUSER}
@@ -25,13 +28,10 @@ services:
         env_file:
             - .env
         ports:
-            - 6000:6000
+            - 60000:60000
         depends_on:
             - oroneta.core-system.postgres
         # network_mode: "host"
-
-        volumes:
-            - ./migration/init.sql:/docker-entrypoint-initdb.d/init.sql      
       
 
 
