Volumes fixe when merging

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
 
     oroneta.core-system.server:
         container_name: oroneta.core-system.server
-        # restart: unless-stopped
+        restart: unless-stopped
         build:
             context: ..
             dockerfile: ./docker/server/Dockerfile
@@ -49,5 +49,5 @@ services:
         # network_mode: "host"
 
 
-    postgres:             
-      
+volumes:
+    postgres:
